# ti-sans-undertale

./: .gitattributes  Makefile.toml  README.md  flake.nix
asset-builder/: Cargo.toml
asset-builder/src/: cli.rs  main.rs  sprite.rs
assets/: sprites.toml
include/: macros.inc  math.inc
src/: attacks.asm  collisions.asm  draw.asm  font.asm  font_comic.asm  game.asm  gaster_blaster.asm  gaster_blaster_0.asm  gaster_blaster_1.asm  gaster_blaster_2.asm  gaster_blaster_3.asm  gaster_blaster_4.asm  gaster_blaster_5.asm  libload.asm  main.asm  math.asm  player.asm  sprites.asm  text.asm
src/attacks/: attack_0.asm  gaster_blaster.asm  general.asm
src/draw/: bones.asm  clipping.asm  gaster_blaster.asm
src/font/: comic.asm  hud.asm
src/player/: blue.asm  red.asm
