[package]
name = "asset-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.1"
